--- a/index.html
+++ b/index.html
@@ -43,6 +43,37 @@
     opacity: 0;
     pointer-events: none;
   }
+
+  #ui-buttons {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 12px;
+    border-radius: 8px;
+    color: white;
+    font-family: Arial, sans-serif;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  /* Button Styling */
+  .ui-button {
+    background: #3498db;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background 0.2s;
+  }
+
+  .ui-button:hover {
+    background: #2980b9;
+  }
 </style>
 
 <body>
@@ -55,6 +86,14 @@
     <p><strong>Q / E</strong> - Rotate</p>
     <p><strong>H</strong> - Hide/Show</p>
   </div>
+
+  <div id="ui-buttons">
+    <h2>Arm Commands</h2>
+    <button class="ui-button" id="btn1">Move To A</button>
+    <button class="ui-button" id="btn2">Move To B</button>
+    <button class="ui-button" id="btn3">STOP</button>
+  </div>
+
 </body>
 
 </html>
