--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
   </div>
 
   <div id="ui-buttons">
-    <h2>Arm Commands</h2>
-    <button class="ui-button" id="btn1">Move To A</button>
-    <button class="ui-button" id="btn2">Move To B</button>
-    <button class="ui-button" id="btn3">STOP</button>
+    <button class="ui-button" id="btn1">GOTO 1</button>
+    <button class="ui-button" id="btn2">GOTO 2</button>
+    <button class="ui-button" id="btn3">GOTO 3</button>
+    <button class="ui-button" id="btn4">GOTO 4</button>
+    <button class="ui-button" id="btn5">GOTO 5</button>
+    <button class="ui-button" id="btn6">GOTO 6</button>
+    <button class="ui-button" id="btn7">STOP</button>
   </div>
 
 </body>
