refactor & ui fix

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <button class="ui-button" id="btn7">STOP</button>
   </div>
 
+  <div id="hud" class="hidden">Press E to interact</div>
+
+
 </body>
 
 </html>
