--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <button class="ui-button" id="btn7">STOP</button>
   </div>
 
-  <div id="hud" class="hidden">Press E to interact</div>
+  <div id="hud" class="hidden">Click microscope to interact</div>
 
 
 </body>
