microscope dialog ui

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
   <div id="hud" class="hidden">Click microscope to interact</div>
 
+  <div id="dialog" class="dialog-hidden">
+    <div class="dialog-content">
+      <h2 id="dialog-title">Dialog Title</h2>
+      <p id="dialog-message">Dialog message goes here...</p>
+      <button id="dialog-close">Close</button>
+    </div>
+  </div>
 
 </body>
 
