--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     </div>
   </div>
 
+  <div id="loading-screen">
+    <div class="spinner"></div>
+    <p>Loading...</p>
+  </div>  
+
 </body>
 
 </html>
