--- a/index.html
+++ b/index.html
@@ -5,9 +5,56 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Micro Farm Demo</title>
+
+  <style>
+/* Fullscreen loading screen */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgb(48, 48, 48);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    font-size: 20px;
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+/* When loading is done, fade out the overlay */
+#overlay.hidden {
+    opacity: 0;
+    transform: scale(0.8); /* Shrinks smoothly */
+    pointer-events: none;
+}
+
+/* Spinner Animation */
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid rgba(255, 255, 255, 0.3);
+    border-top: 5px solid white;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin-bottom: 10px;
+}
+
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+
+  </style>
 </head>
 
 <body>
+
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 
@@ -41,7 +88,12 @@
   <div id="loading-screen">
     <div class="spinner"></div>
     <p>Loading...</p>
-  </div>  
+  </div>
+
+  <div id="overlay">
+    <div class="spinner"></div>
+    <p>Loading...</p>
+</div> 
 
 </body>
 
