--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <p><strong>W A S D</strong> - Move</p>
     <p><strong>Q / E</strong> - Rotate</p>
     <p><strong>H</strong> - Hide/Show</p>
+    <p><strong>R</strong> - Toggle Mouse Lock</p>
   </div>
 
   <div id="ui-buttons">
