toggle player opacity

--- a/index.html
+++ b/index.html
@@ -64,11 +64,17 @@
   <script type="module" src="/src/main.ts"></script>
 
   <div id="ui">
-    <p><strong>W A S D</strong> - Move</p>
-    <p><strong>Q / E</strong> - Rotate</p>
-    <p><strong>H</strong> - Hide/Show</p>
-    <p><strong>R</strong> - Toggle Mouse Lock</p>
+    <p><strong>Controls</strong></p>
+    <div class="ui-controls">
+      <div><strong>W A S D</strong> - Move</div>
+      <div><strong>Q / E</strong> - Rotate</div>
+      <div><strong>H</strong> - Hide UI</div>
+      <div><strong>R</strong> - Mouse Lock</div>
+      <div><strong>T</strong> - Toggle Opacity</div>
+      <div><strong>Wheel</strong> - Zoom</div> <!-- Empty div for alignment -->
+    </div>
   </div>
+
 
   <div id="ui-buttons">
     <button class="ui-button" id="btn1">GOTO 1</button>
