--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
     <button class="ui-button" id="btn6">GOTO 6</button>
     <button class="ui-button" id="btn7">STOP</button>
   </div>
+  <div id="sync-panel">
+    <button class="ui-button" id="sync-button">SYNC</button>
+  </div>  
 
   <div id="hud" class="hidden">Click microscope to interact</div>
 
