real joints sync

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   </div>
   <div id="sync-panel">
     <button class="ui-button" id="sync-button">SYNC</button>
+    <button class="ui-button" id="sync-button-real">SYNC-REAL</button>
   </div>  
 
   <div id="hud" class="hidden">Click microscope to interact</div>
