hypha service button

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     <span class="label">Physics</span>
   </div>
 
+  <div id="hypha-panel">
+    <button class="ui-button" id="register-hypha-button">REGISTER HYPHA</button>
+  </div>
+
 
   <div id="hud" class="hidden">Click microscope to interact</div>
 
